styles/base.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');

body {
    font-family: 'Poppins', 'Helvetica';
    max-width: 1600px;
    margin: 0 auto;
    font-size: 20px;
    background-color: #333;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
}

header {
    display: grid;
    grid-column: 1/6;
    padding: 20px 25px;
    background-color: rgb(46, 46, 255);
}

#profile {
    display: grid;
    grid-column: 1/2;
    margin: auto;
}

h1 {
    display: grid;
    grid-column: 2/3;
    margin: auto;
    margin-left: 25px;
    font-size: 2.5em;
}

nav {
    display: grid;
    grid-column: 1/6;
    font-size: larger;
    align-self: center;
    background-color: rgba(0, 0, 0, 0.404);
}

.navlink {
    grid-column: 2/3;
    color: #f1ebff;
    padding: 18px;
    align-items: center;
    text-decoration: none;
}

main {
    display: grid;
    grid-column: 1/6;
    background-color: antiquewhite;
    color: #333;
    padding: 2%;
}

h2 {
    color: #333;
    margin: auto;
    font-size: 1.8em;
}

h2:after {
    content: ' ';
    display: block;
    border: 1.5px solid black;
}

.card {
    display: grid;
    margin-top: 1.5rem;
}

h3 {
    margin: auto;
    border: 2px black;
    font-size: 1.5em;
    background-color: #2828cc;
    color: black;
    padding: 10px;
    border-radius: 15px;
}

a {
    grid-column: 2/3;
    color: #333;
    padding: 18px;
    align-items: center;
    text-decoration: none;
}

ul {
    padding: 50px;
    margin: auto;
    margin-left: 2rem;
}


footer {
    display: grid;
    grid-column: 3/4;
    justify-content: center;
    padding: 20px;
    margin: auto;
}

p {
    padding: 0;
    margin: 0;
    color: #f1ebff;
}

